@@ -5,6 +5,7 @@ require "administrate/fields/has_many"
 require "administrate/fields/has_one"
 require "administrate/fields/image"
 require "administrate/fields/number"
+require "administrate/fields/polymorphic"
 require "administrate/fields/string"
 
 module Administrate
